--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,14 +57,14 @@ jobs:
       uses: ./
       with:
         java-version: 11.0.7
-    - name: Verify Java 13
+    - name: Verify Java 11
       run: __tests__/verify-java.sh 11.0.7
 
   test-bypass-proxy:
     runs-on: ubuntu-latest
     env:
       https_proxy: http://no-such-proxy:3128
-      no_proxy: github.com,static.azul.com
+      no_proxy: github.com,cdn.azul.com
     steps:
     - uses: actions/checkout@v2
     - name: Clear tool cache
